[tool.poetry]
name = "celery-lab"
version = "0.1.0"
description = ""
authors = ["krouw <felipe.andrez@live.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
celery = {extras = ["redis"], version = "^5.2.7"}
flower = "^1.2.0"
sqlalchemy = "^2.0.11"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
